syntax ="proto3";

package pbA;

option go_package = "./";

service AdminService{
    rpc AdminLogin(AdminRequest)returns(AdminResponse);
    rpc CreateMenu(AMenuItem)returns(AdminResponse);
    rpc FetchByMenuID(AMenuBYId)returns(AMenuItem);
    rpc FetchByName(AMenuBYName)returns(AMenuItem);
    rpc FetchMenus(AdminNoParam)returns(AMenuList);
}

message AdminNoParam{}

message AdminRequest{
    string username = 1;
    string password =2;
    string role =3;
}

message AdminResponse{
    string status = 1;
    string error = 2;
    string message = 3;
}

message AMenuItem{
    uint32 id = 1;
    string category = 2;
    string name = 3;
    double price = 4;
    string foodimage = 5;
    string duration = 6;
}

message AMenuBYId{
    uint32 id = 1;
}

message AMenuBYName{
    string name = 1;
}

message AMenuList{
    repeated AMenuItem menus = 1;
}